--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "monaco-editor": "^0.14.3",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0"
@@ -15,6 +16,9 @@
     "@vue/cli-plugin-babel": "^3.0.0",
     "@vue/cli-plugin-typescript": "^3.0.0",
     "@vue/cli-service": "^3.0.0",
+    "monaco-editor-webpack-plugin": "^1.5.1",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.5.17"
   }
